# Mouse2Joystick

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: BackendData.hpp  CurrentFrontend.hpp  FrontendData.cpp  FrontendData.hpp  Point.hpp  Version.hpp  main.cpp  nk_include.h
src/win32/: Backend.cpp  Backend.hpp  CMakeLists.txt  Frontend.cpp  Frontend.hpp
submodules/: nuklear_sdl_gl3.h
